# talos

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.production  README.md  docker-compose.prod.yml  docker-compose.reloading.yml  docker-compose.yml  logging.ini  pyproject.toml
.github/: labeler.yml
.github/workflows/: greetings.properties.json  greetings.yml  pr-labeler.properties.json  pr-labeler.yml  python-package.properties.json  talos-deploy.yml  talos-package.yml  talos-stage.yml
talosbot/: __main__.py  bot.py  cli.py  cog_manager.py  config.py  db_models.py  error_handling.py  events.py  exceptions.py  helpers.py  logging.py
talosbot/commands/: base.py  manage.py
talosbot/extensions/competition/: competition.py
talosbot/extensions/tutorial/: tutorial.py
